# diplomacy-calculator

./: README.md  dipcalc.py  pyproject.toml  requirements.txt  utils.py
dipcalc/: __init__.py  adjudicator.py  loaders.py  parser.py  utils.py
dipcalc/tests/: test_basic_checks.py  test_class.py
dipcalc/variants/basictest/: factions.csv  territories.csv
dipcalc/variants/default/: factions.csv  placements.txt
game-scripts/: definitions.txt
variants/default/: territories.csv
